Fix clickable tags bg dark mode

--- a/styles/indexTable.module.less
+++ b/styles/indexTable.module.less
@@ -38,6 +38,10 @@
       color: var(--cr-primary-text) !important;
     }
   }
+
+  .clickableTag {
+    background-color: @cr-gray-4;
+  }
 }
 
 .table > div > div > div > div {
